--- a/app-manifest.json
+++ b/app-manifest.json
@@ -4,6 +4,7 @@
     "description": "Echo Live Blog enables the editorial team to quickly create streams of live coverage during breaking news or major events. ",
     "app_version": "{%=packageVersions.stable%}",
     "cloudapp_protocol_version": "1.0.0",
+    "icon": "{%=baseURLs.prod%}/images/icon.png",
     "developer": {
         "id": "echo",
         "name": "Echo",
