--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:EchoAppsTeam/EchoLiveBlog.git"
+    "url": "git://github.com/EchoAppsTeam/EchoLiveBlog.git"
   },
   "bugs": {
     "url": "https://github.com/EchoAppsTeam/EchoLiveBlog/issues"
