Remove manifest object from env configs for unification

--- a/app-manifest.json
+++ b/app-manifest.json
@@ -1,6 +1,6 @@
 {
-	"id": "{%=manifest.id%}",
-	"name": "{%=manifest.name%}",
+	"id": "echo-live-blog",
+	"name": "Live Blog",
 	"description": "Cover breaking news in real-time",
 	"app_version": "{%=packageVersions.stable%}",
 	"cloudapp_protocol_version": "1.0.0",
